Initial layout for report in tex

--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,9 @@ rwoutput*
 mixoutput*
 
 #LaTeX Cruf#
-handout/*.log
-handout/*.aux
+*.log
+*.aux
+*.dvi
 
 #Temporary LibreOffice Files#
 .~*.xlsx#
