Mostly written Method section

--- a/report/Makefile
+++ b/report/Makefile
@@ -5,8 +5,7 @@ all: report
 report: report.tex
 	pdflatex report.tex
 
-clean: clean
+clean:
 	rm -f report.aux
 	rm -f report.log
 	rm -f report.dvi
-	#rm -f tex/texput.log
